# EarferanaSync

./: .breakpoints  .gitignore  .run  README.md  archival.ts  client.js  client.ts  dataMsg.js  dataMsg.ts  exeInfo.json  index.js  index.ts  main.js  main.py  map.json  package-lock.json  package.json  pyproject.toml  result.txt  scrapeyt.ts  syncing.js  syncing.ts  test.txt  tsconfig.json  webhooks.json  wsgi.py
