[tool.poetry]
name = "repl_python3_MapRPBotArchives"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.0"
Flask = "^2.1.1"
forgive = "^1.0.0"
discord = "2.2.2"
requests = "^2.31.0"
discord-py = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
